[gd_scene load_steps=14 format=3 uid="uid://buuot7gyhswa8"]

[ext_resource type="Script" path="res://game.gd" id="1_ytohq"]
[ext_resource type="PackedScene" uid="uid://xq22n83d7x2j" path="res://entity/Rockets/rocket_1.tscn" id="2_wf4ha"]
[ext_resource type="PackedScene" uid="uid://bqponbnbw5ddv" path="res://entity/Enemy/asteroid_enemy.tscn" id="3_0ixse"]
[ext_resource type="PackedScene" uid="uid://3ijf8dh0m6fm" path="res://entity/Rockets/rocket_2.tscn" id="3_4rc4l"]
[ext_resource type="PackedScene" uid="uid://r6sx0qx8u34r" path="res://entity/Rockets/rocket_3.tscn" id="4_gsvab"]
[ext_resource type="PackedScene" uid="uid://dfufm6bxdjf8p" path="res://entity/Enemy/meteorite_enemy.tscn" id="4_t4wyp"]
[ext_resource type="PackedScene" uid="uid://btqyi3exh1sbk" path="res://entity/Enemy/fast_asteriod_enemy.tscn" id="5_0awbe"]
[ext_resource type="PackedScene" uid="uid://dblfj11mb0fas" path="res://entity/Enemy/comet_enemy.tscn" id="6_5vsky"]
[ext_resource type="PackedScene" uid="uid://d2c74hnrpt4am" path="res://hud.tscn" id="6_j8cvl"]
[ext_resource type="PackedScene" uid="uid://hiu2fdyp0ka8" path="res://game_over_screen.tscn" id="7_dtxqy"]
[ext_resource type="Texture2D" uid="uid://clhkejkn4beuf" path="res://assets/Purple Nebula/Purple_Nebula_02-1024x1024.png" id="8_nck70"]
[ext_resource type="Texture2D" uid="uid://bx55btgef33t3" path="res://assets/Enjl-Starry Space Background/background_4.png" id="8_qbols"]

[sub_resource type="PackedScene" id="PackedScene_2gl1r"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Rockets", "Node2D", "Rocket1", "rockets", "visible", "Rocket2", "rockets", "visible", "Rocket3", "rockets"),
"node_count": 4,
"node_paths": [NodePath("."), NodePath("."), NodePath(".")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 0, 0, 1073741824, 0, 2147483647, 2, 0, 1, 4, 1, 1, 3, 1073741825, 0, 2147483647, 5, 2, 1, 7, 3, 1, 6, 1073741826, 0, 2147483647, 8, 4, 0, 1, 9),
"variants": [ExtResource("2_wf4ha"), false, ExtResource("3_4rc4l"), false, ExtResource("4_gsvab")],
"version": 3
}

[node name="Game" type="Node2D"]
script = ExtResource("1_ytohq")
rockets_scene = SubResource("PackedScene_2gl1r")
enemy_scenes = Array[PackedScene]([ExtResource("3_0ixse"), ExtResource("4_t4wyp"), ExtResource("5_0awbe"), ExtResource("6_5vsky")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("6_j8cvl")]

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource("7_dtxqy")]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_nck70")

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 1400)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("8_qbols")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1000, 1400)

[node name="PlayerSpawnPosition" type="Marker2D" parent="."]
position = Vector2(500, 1307)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
